--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "illuminate/database": "5.5.*",
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
         "vinkla/hashids": "^3.3"
     },
     "require-dev": {
