--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "vinkla/hashids": "^3.3"
+        "vinkla/hashids": "^3.2|^4.0|^5.0"
     },
     "require-dev": {
         "orchestra/testbench": " ^3.5",
