--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require-dev": {
         "orchestra/testbench": "^3.5",
         "orchestra/database": "^3.5",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0|~7.0|~8.0"
     },
     "autoload": {
         "psr-4": {
