--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0",
-        "vinkla/hashids": "^3.2|^4.0|^5.0|^6.0|^7.0"
+        "illuminate/database": "~6.0.0",
+        "vinkla/hashids": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "4.x-dev",
         "orchestra/database": "4.x-dev",
         "orchestra/testbench-core": "4.x-dev",
-        "phpunit/phpunit": "~6.0|~7.0|~8.0"
+        "phpunit/phpunit": "~8.0"
     },
     "autoload": {
         "psr-4": {
