--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ env:
   - ILLUMINATE_VERSION=5.6.* 
   - ILLUMINATE_VERSION=5.7.*  
   - ILLUMINATE_VERSION=5.8.*  
+  - ILLUMINATE_VERSION=^6.0  
+
+matrix:
+  exclude:
+    - php: 7.1
+      env: ILLUMINATE_VERSION=^6.0
 
 before_install:
   - composer require "illuminate/database:${ILLUMINATE_VERSION}" --no-update
