--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "vinkla/hashids": "^3.2|^4.0|^5.0|^6.0"
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+        "vinkla/hashids": "^3.2|^4.0|^5.0|^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.5",
-        "orchestra/database": "^3.5",
+        "orchestra/testbench": "^3.5|^4.0",
+        "orchestra/database": "^3.5|^4.0",
         "phpunit/phpunit": "~6.0|~7.0|~8.0"
     },
     "autoload": {
