--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
-        "vinkla/hashids": "^3.2|^4.0|^5.0|^6.0|^7.0"
+        "illuminate/database": "^7.0",
+        "vinkla/hashids": "^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.5|^4.0",
-        "orchestra/database": "^3.5|^4.0",
-        "phpunit/phpunit": "~6.0|~7.0|~8.0"
+        "orchestra/testbench": "^5.0",
+        "orchestra/database": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
