--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/database": "^7.0",
-        "vinkla/hashids": "^8.0"
+        "illuminate/database": "^7.0|^8.0",
+        "vinkla/hashids": "^8.0|^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
-        "orchestra/database": "^5.0",
+        "orchestra/testbench": "^5.0|^6.0",
+        "orchestra/database": "^5.0|^6.x-dev",
         "phpunit/phpunit": "^8.4|^9.0"
     },
     "autoload": {
