--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         }
     ],
     "require": {
-        "illuminate/database": "^7.0",
-        "vinkla/hashids": "^8.0"
+        "illuminate/database": "^8.0",
+        "vinkla/hashids": "^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
-        "orchestra/database": "^5.0",
-        "phpunit/phpunit": "^8.4|^9.0"
+        "orchestra/testbench": "^6.0",
+        "orchestra/database": "^6.0",
+        "phpunit/phpunit": "^8.4|^9.0",
+        "laravel/legacy-factories": "^1.0"
     },
     "autoload": {
         "psr-4": {
