--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.0",
-        "vinkla/hashids": "^9.0"
+        "illuminate/database": "^9.0",
+        "vinkla/hashids": "^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^8.4|^9.0",
-        "laravel/legacy-factories": "^1.0"
+        "orchestra/testbench": "^7.0",
+        "phpunit/phpunit": "^9.5.10",
+        "laravel/legacy-factories": "^1.3"
     },
     "autoload": {
         "psr-4": {
