--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.0",
+        "illuminate/database": "^8.0|^9.0",
         "vinkla/hashids": "^9.0"
     },
     "require-dev": {
