--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ php:
  - 7.3
  - 7.4 
  - 8.0 
+ - 8.1
 
 env:
   - ILLUMINATE_VERSION=^8.0   
+  - ILLUMINATE_VERSION=^9.0   
 
 before_install:
   - composer require "illuminate/database:${ILLUMINATE_VERSION}" --no-update
