--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.0|^9.0",
+        "illuminate/database": "^8.0|^9.0|^10.0",
         "vinkla/hashids": "^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": "^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^8.4|^9.0",
         "laravel/legacy-factories": "^1.0"
     },
