--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
-        "vinkla/hashids": "^9.0|^10.0|^11.0|^12.0"
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "vinkla/hashids": "^9.0|^10.0|^11.0|^12.0|^13.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^8.4|^9.0|^10.0",
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^8.4|^9.0|^10.0|^11.0",
         "laravel/legacy-factories": "^1.0"
     },
     "autoload": {
